[gd_scene load_steps=17 format=3 uid="uid://dieechvi07884"]

[ext_resource type="Script" path="res://Scripts/Levels/level2.gd" id="1_fjm78"]
[ext_resource type="Material" uid="uid://d28i7xt3e1ww0" path="res://assets/Floor_Material.tres" id="1_uhr58"]
[ext_resource type="Texture2D" uid="uid://bd5kw8l0w36o5" path="res://assets/grid.jpg" id="2_vh6h3"]
[ext_resource type="PackedScene" uid="uid://bqqp3t3gyi13u" path="res://scenes/new_worm.tscn" id="3_172du"]
[ext_resource type="Script" path="res://Scripts/Camera_Follow.gd" id="4_yirqo"]
[ext_resource type="PackedScene" uid="uid://b7yhrd8oma55f" path="res://scenes/button_small.tscn" id="6_dhba3"]
[ext_resource type="PackedScene" uid="uid://bce6atjqp6kof" path="res://scenes/finish.tscn" id="7_3fl6a"]
[ext_resource type="PackedScene" uid="uid://br1c6x1rx1cy8" path="res://scenes/guillotine.tscn" id="7_11ngi"]
[ext_resource type="PackedScene" uid="uid://c2apv7vg2rtcy" path="res://scenes/lettuce.tscn" id="8_5o45l"]
[ext_resource type="PackedScene" uid="uid://d076us4fj6gri" path="res://scenes/pressure_pad.tscn" id="8_a2ngt"]
[ext_resource type="PackedScene" uid="uid://k10usb8384ng" path="res://scenes/fence.tscn" id="9_xpsm2"]
[ext_resource type="Script" path="res://Scripts/draw_worm_pos.gd" id="12_63q33"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w8wp2"]
albedo_texture = ExtResource("2_vh6h3")
uv1_scale = Vector3(0.063, 0.063, 0.063)
uv1_offset = Vector3(0.094, 0, -0.031)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4cr8f"]

[sub_resource type="Sky" id="Sky_oi8rl"]
sky_material = SubResource("ProceduralSkyMaterial_4cr8f")

[sub_resource type="Environment" id="Environment_rnq1e"]
background_mode = 2
sky = SubResource("Sky_oi8rl")

[node name="LevelBase" type="Node3D"]
script = ExtResource("1_fjm78")

[node name="Logic" type="Node3D" parent="."]

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
layers = 2
material_override = ExtResource("1_uhr58")
use_collision = true
collision_layer = 2
collision_mask = 2
size = Vector3(100, 1, 100)
material = SubResource("StandardMaterial3D_w8wp2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rnq1e")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.673273, -0.556626, 0.486694, -0.543889, 0.073076, 0.835969, -0.500888, -0.827542, -0.253544, 0, 0, 0)
shadow_enabled = true

[node name="Worm" parent="." instance=ExtResource("3_172du")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.98681, 0.463309, -3.90225)
spawn_points = [Vector3(0, 0, 0), Vector3(0, 0, 1)]

[node name="GameCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.45452, 0.541675, 0, 0.766045, 0.642788, -0.707107, -0.45452, 0.541675, 3.3, 6.1, 3.3)
projection = 1
fov = 35.0
size = 8.293
script = ExtResource("4_yirqo")

[node name="Walls" type="Node3D" parent="."]

[node name="walls6" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.913336, 0.471476, -13.6628)
use_collision = true
size = Vector3(0.978682, 1, 4.22186)

[node name="walls7" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.53364, 0.501894, -1.94955)
use_collision = true
size = Vector3(8.07683, 0.964722, 0.96402)

[node name="walls8" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.0787, 0.485755, -9.4638)
use_collision = true
size = Vector3(0.978682, 1, 14.0748)

[node name="walls9" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.42441, 0.433126, -16.0858)
use_collision = true
size = Vector3(7.83015, 1.05646, 0.9897)

[node name="walls10" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.892519, 0.520767, -6.46467)
use_collision = true
size = Vector3(0.978682, 1, 8.14456)

[node name="walls11" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.31436, 0.501969, -6.03559)
use_collision = true
size = Vector3(1.49913, 1, 0.857022)

[node name="walls17" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.64376, 0.26326, -12.0514)
use_collision = true
size = Vector3(1.90841, 0.522583, 0.857022)

[node name="walls16" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0306, 0.255875, -9.46862)
use_collision = true
size = Vector3(0.931621, 0.507813, 5.96963)

[node name="walls15" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.10104, 0.251725, -10.9581)
use_collision = true
size = Vector3(0.984889, 0.499512, 2.82412)

[node name="walls14" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.61841, 0.263932, -9.99037)
use_collision = true
size = Vector3(2.1607, 0.523926, 0.857022)

[node name="walls13" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.59933, 0.24733, -11.921)
use_collision = true
size = Vector3(2.05181, 0.490723, 0.857022)

[node name="walls12" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.71897, 0.494409, -4.00648)
use_collision = true
size = Vector3(2.6737, 1, 0.917769)

[node name="Finish" parent="." instance=ExtResource("7_3fl6a")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.46695, 4.76837e-07, -11.483)
collision_layer = 8
collision_mask = 2

[node name="Lettuce" parent="." instance=ExtResource("8_5o45l")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -5.91874, 0, -14.0629)

[node name="Lettuce2" parent="." instance=ExtResource("8_5o45l")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -5.97441, 0, -8.17894)

[node name="Fence" parent="." instance=ExtResource("9_xpsm2")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.27198, 1.0739, -5.09004)

[node name="Guillotine" parent="." instance=ExtResource("7_11ngi")]
transform = Transform3D(-9.39795e-09, 0, 0.215, 0, 0.215, 0, -0.215, 0, -9.39795e-09, -4.06719, 0, -13.7997)

[node name="ButtonSmall" parent="." instance=ExtResource("6_dhba3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -6.03883, 0, -10.9923)
button_id = "0"

[node name="PressurePad" parent="." instance=ExtResource("8_a2ngt")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -4.06398, -4.76837e-07, -12.0107)

[node name="DebugLayer" type="CanvasLayer" parent="."]
visible = false

[node name="DrawWormPos" type="Control" parent="DebugLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_63q33")
metadata/_edit_use_anchors_ = true

[connection signal="lettuce_body_entered" from="Lettuce" to="Worm" method="_on_lettuce_lettuce_body_entered"]
[connection signal="lettuce_body_entered" from="Lettuce2" to="Worm" method="_on_lettuce_entered"]
[connection signal="button_pressed" from="ButtonSmall" to="." method="_on_button_small_button_pressed"]
[connection signal="button_unpressed" from="ButtonSmall" to="." method="_on_button_small_button_unpressed"]
[connection signal="body_entered" from="PressurePad" to="Logic" method="_on_pressure_pad_body_entered"]
[connection signal="pressed" from="PressurePad" to="." method="_on_pressure_pad_pressed"]
[connection signal="unpressed" from="PressurePad" to="." method="_on_pressure_pad_unpressed"]
